--- a/src/main/resources/me/delta/tictactoe/board.fxml
+++ b/src/main/resources/me/delta/tictactoe/board.fxml
@@ -17,96 +17,101 @@
             <menus>
                 <Menu fx:id="options" mnemonicParsing="false" text="Options">
                     <items>
-                        <MenuItem fx:id="restart" mnemonicParsing="false" onAction="#onRestart" text="Restart"/>
-                        <MenuItem fx:id="close" mnemonicParsing="false" onAction="#onClose" text="Close"/>
+                        <MenuItem fx:id="restart" mnemonicParsing="false" onAction="#onRestart" text="Restart" />
+                        <MenuItem fx:id="close" mnemonicParsing="false" onAction="#onClose" text="Close" />
                     </items>
                 </Menu>
             </menus>
         </MenuBar>
         <AnchorPane maxHeight="-1.0" maxWidth="-1.0" prefHeight="-1.0" prefWidth="-1.0" VBox.vgrow="ALWAYS">
             <children>
-                <Line endX="100.0" endY="-10.0" layoutX="132.0" layoutY="112.0" startX="100.0" startY="360.0"/>
-                <Line endX="100.0" endY="-10.0" layoutX="267.0" layoutY="112.0" startX="100.0" startY="360.0"/>
-                <Line endX="234.0" layoutX="251.0" layoutY="220.0" startX="-136.0"/>
-                <Line endX="234.0" layoutX="251.0" layoutY="355.0" startX="-136.0"/>
-                <Button fx:id="b1" layoutX="115.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b2" layoutX="235.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="130.0" text="Button"/>
-                <Button fx:id="b5" layoutX="235.0" layoutY="221.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="130.0" prefWidth="130.0" text="Button"/>
-                <Button fx:id="b4" layoutX="115.0" layoutY="226.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b9" layoutX="368.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b7" layoutX="115.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b3" layoutX="368.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b6" layoutX="368.0" layoutY="226.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button"/>
-                <Button fx:id="b8" layoutX="235.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="130.0" text="Button"/>
-                <Circle fx:id="o1" fill="#ffffff00" layoutX="174.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o2" fill="#ffffff00" layoutX="300.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o3" fill="#ffffff00" layoutX="427.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o5" fill="#ffffff00" layoutX="300.0" layoutY="287.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o6" fill="#ffffff00" layoutX="427.0" layoutY="294.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o4" fill="#ffffff00" layoutX="174.0" layoutY="286.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o7" fill="#ffffff00" layoutX="173.0" layoutY="410.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o8" fill="#ffffff00" layoutX="300.0" layoutY="410.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Circle fx:id="o9" fill="#ffffff00" layoutX="427.0" layoutY="416.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false"/>
-                <Text layoutX="149.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x1">
+                <Line endX="100.0" endY="-10.0" layoutX="132.0" layoutY="112.0" startX="100.0" startY="360.0" />
+                <Line endX="100.0" endY="-10.0" layoutX="267.0" layoutY="112.0" startX="100.0" startY="360.0" />
+                <Line endX="234.0" layoutX="251.0" layoutY="220.0" startX="-136.0" />
+                <Line endX="234.0" layoutX="251.0" layoutY="355.0" startX="-136.0" />
+                <Button fx:id="b1" layoutX="115.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b2" layoutX="235.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="130.0" text="Button" />
+                <Button fx:id="b5" layoutX="235.0" layoutY="221.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="130.0" prefWidth="130.0" text="Button" />
+                <Button fx:id="b4" layoutX="115.0" layoutY="226.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b9" layoutX="368.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b7" layoutX="115.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b3" layoutX="368.0" layoutY="100.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b6" layoutX="368.0" layoutY="226.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="117.0" text="Button" />
+                <Button fx:id="b8" layoutX="235.0" layoutY="356.0" mnemonicParsing="false" onMouseClicked="#bn" opacity="0.0" prefHeight="120.0" prefWidth="130.0" text="Button" />
+                <Circle fx:id="o1" fill="#ffffff00" layoutX="174.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o2" fill="#ffffff00" layoutX="300.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o3" fill="#ffffff00" layoutX="427.0" layoutY="160.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o5" fill="#ffffff00" layoutX="300.0" layoutY="287.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o6" fill="#ffffff00" layoutX="427.0" layoutY="294.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o4" fill="#ffffff00" layoutX="174.0" layoutY="286.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o7" fill="#ffffff00" layoutX="173.0" layoutY="410.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o8" fill="#ffffff00" layoutX="300.0" layoutY="410.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Circle fx:id="o9" fill="#ffffff00" layoutX="427.0" layoutY="416.0" radius="35.0" stroke="BLACK" strokeType="INSIDE" strokeWidth="3.0" visible="false" />
+                <Text layoutX="149.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" fx:id="x1">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="275.0" layoutY="183.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x2">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="402.0" layoutY="184.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x3">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="149.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x4">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="275.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x5">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="402.0" layoutY="318.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x6">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="149.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x7">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="275.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x8">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="402.0" layoutY="440.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X" visible="false" fx:id="x9">
                     <font>
-                        <Font name="Dubai Light" size="88.0"/>
+                        <Font name="Dubai Light" size="88.0" />
                     </font>
                 </Text>
                 <Text layoutX="249.0" layoutY="538.0" strokeType="OUTSIDE" strokeWidth="0.0" text="X WON" visible="false" fx:id="xwon">
                     <font>
-                        <Font name="Arial" size="30.0"/>
+                        <Font name="Arial" size="30.0" />
                     </font>
                 </Text>
                 <Text fx:id="owon" layoutX="247.0" layoutY="537.0" strokeType="OUTSIDE" strokeWidth="0.0" text="O WON" visible="false">
                     <font>
-                        <Font name="Arial" size="30.0"/>
+                        <Font name="Arial" size="30.0" />
                     </font>
                 </Text>
                 <Text fx:id="Nobodywon" layoutX="253.0" layoutY="536.0" strokeType="OUTSIDE" strokeWidth="0.0" text="DRAW" visible="false">
                     <font>
-                        <Font name="Arial Italic" size="30.0"/>
+                        <Font name="Arial Italic" size="30.0" />
                     </font>
                 </Text>
+            <Text fx:id="pir" layoutX="14.0" layoutY="32.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Player in row: ">
+               <font>
+                  <Font name="Arial" size="20.0" />
+               </font>
+            </Text>
             </children>
         </AnchorPane>
     </children>
